--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watch --silent --colors --noStackTrace",
+    "test": "jest --watch --silent --colors --noStackTrace --coverage",
     "test:staged": "jest --passWithNoTests --findRelatedTests --noStackTrace",
-    "test:ci": "jest --coverage"
+    "test:ci": "jest --coverage --noStackTrace --silent"
   },
   "standard": {
     "env": [
